--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-flask==2.3.3
-requests==2.31.0
-nltk==3.8.1
-newsapi-python==0.2.7
-scikit-learn==1.3.0
-pandas==2.0.3
+flask
+requests
+nltk
+scikit-learn
+pandas
+transformers
+torch
+numpy
+dotenv
